# github-distributed-owners

./: .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  CODE_OF_CONDUCT.md  Cargo.toml  LICENSE  OWNERS  README.md  deny.toml  rust-toolchain.toml
.github/: CODEOWNERS
.github/DISCUSSION_TEMPLATE/: users.yml
.github/workflows/: build-and-test.yaml  cargo-deny.yaml  pre-commit.yaml
src/: allow_filter.rs  codeowners.rs  main.rs  owners_file.rs  owners_set.rs  owners_tree.rs  pipeline.rs  test_utils.rs  tree.rs
