[package]
name = "github-distributed-owners"
version = "0.1.7"
edition = "2021"
authors = ["Andrew Ring"]

description = "A tool for auto generating GitHub compatible CODEOWNERS files from OWNERS files distributed through the file tree."
readme = "README.md"
homepage = "https://github.com/andrewring/github-distributed-owners"
repository = "https://github.com/andrewring/github-distributed-owners"
license = "MIT"
keywords = ["cli", "devops", "github", "owners", "utility"]
categories = ["command-line-utilities", "development-tools"]

include = [
    "LICENSE",
    "README.md",
    "Cargo.toml",
    "Cargo.lock",
    "**/*.rs"
]

[dependencies]
anyhow = "1.0.75"
clap = { version = "4.4.2", features = ["derive"] }
clap-verbosity-flag = "2.0.1"
env_logger = "0.10.0"
indoc = "2.0.4"
itertools = "0.11.0"
lazy_static = "1.4.0"
log = "0.4.20"
regex = "1.9.5"

[dev-dependencies]
tempfile = "3.8.0"
